More Security text update (long Escape)

--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@ usual keyboard shortcut action.</p>
 	and (in conjunction with the <a data-link-type="biblio" href="#biblio-pointerlock">[PointerLock]</a> API) prevent the user from exiting
 	the web page.</p>
    <p>To prevent this, the user agent MUST provide a way for the user to exit from
-	keyboard lock even if all of the keys are "lock"ed.</p>
+	keyboard lock even if all of the keys are requested by the API.</p>
    <p>This specification requires support for allowing a long (more than 2 second) Escape
-	key press to trigger an exit from Keyboard Lock. User agents may also provide
-	alternate ways to exit Keyboard Lock.</p>
+	key press to trigger an exit from Keyboard Lock. In addition, user agents may choose
+	to also provide alternate ways to exit Keyboard Lock.</p>
    <h2 class="heading settled" data-level="7" id="privacy"><span class="secno">7. </span><span class="content">Privacy Considerations</span><a class="self-link" href="#privacy"></a></h2>
    <p>Not applicable. This API does not use or reveal any personal information
 	about the current user.</p>
