Security: Fullscreen + Pointer Lock

--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@ usual keyboard shortcut action.</p>
 	do so when a physical keyboard is connected.</p>
    <h2 class="heading settled" data-level="6" id="security"><span class="secno">6. </span><span class="content">Security Considerations</span><a class="self-link" href="#security"></a></h2>
    <p>One concern with this API is that it could be used to grab all of the keys
-	and (in conjunction with the <a data-link-type="biblio" href="#biblio-pointerlock">[PointerLock]</a> API) prevent the user from exiting
-	the web page.</p>
+	and (in conjunction with the <a data-link-type="biblio" href="#biblio-fullscreen">[Fullscreen]</a> and <a data-link-type="biblio" href="#biblio-pointerlock">[PointerLock]</a> API) prevent
+	the user from exiting the web page.</p>
    <p>To prevent this, the user agent MUST provide a way for the user to exit from
 	keyboard lock even if all of the keys are requested by the API.</p>
    <p>This specification requires support for allowing a long (more than 2 second) Escape
