Fix #8: note that captured keys bypass UA handling

--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@ keyboard handler and pass the key on to the user agent
 for normal processing (which will exit fullscreen).</p>
          </ol>
         <li data-md="">
-         <p>Dispatch <var>keyEvent</var> to the fullsceen document or element.</p>
+         <p>Dispatch <var>keyEvent</var> directly to the fullsceen document or element,
+bypassing any normal user agent processing.</p>
        </ol>
       <li data-md="">
        <p>Else, handle the key event as it normally would be handled,
