--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ applications that provide a fullscreen immersive experience
 	all available keys allowed by the OS.</p>
    <h2 class="heading settled" data-level="2" id="API"><span class="secno">2. </span><span class="content">Activating and Deactivating Keyboard Lock</span><a class="self-link" href="#API"></a></h2>
 <pre class="idl highlight def" data-highlight="webidl"><span class="kt">partial</span> <span class="kt">interface</span> <a class="nv idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/webappapis.html#navigator">Navigator</a> {
-  [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">void</span> <dfn class="nv dfn-paneled idl-code" data-dfn-for="Navigator" data-dfn-type="method" data-export="" data-lt="requestKeyboardLock(keyCodes)|requestKeyboardLock()" id="dom-navigator-requestkeyboardlock">requestKeyboardLock</dfn>(<span class="kt">optional</span> <span class="kt">sequence</span>&lt;<span class="kt">DOMString</span>> <dfn class="nv dfn-paneled idl-code" data-dfn-for="Navigator/requestKeyboardLock(keyCodes), Navigator/requestKeyboardLock()" data-dfn-type="argument" data-export="" id="dom-navigator-requestkeyboardlock-keycodes-keycodes">keyCodes</dfn> = []);
+  [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">Promise</span>&lt;<span class="kt">void</span>> <dfn class="nv dfn-paneled idl-code" data-dfn-for="Navigator" data-dfn-type="method" data-export="" data-lt="requestKeyboardLock(keyCodes)|requestKeyboardLock()" id="dom-navigator-requestkeyboardlock">requestKeyboardLock</dfn>(<span class="kt">optional</span> <span class="kt">sequence</span>&lt;<span class="kt">DOMString</span>> <dfn class="nv dfn-paneled idl-code" data-dfn-for="Navigator/requestKeyboardLock(keyCodes), Navigator/requestKeyboardLock()" data-dfn-type="argument" data-export="" id="dom-navigator-requestkeyboardlock-keycodes-keycodes">keyCodes</dfn> = []);
   [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">void</span> <dfn class="nv dfn-paneled idl-code" data-dfn-for="Navigator" data-dfn-type="method" data-export="" data-lt="cancelKeyboardLock()" id="dom-navigator-cancelkeyboardlock">cancelKeyboardLock</dfn>();
 };
 </pre>
@@ -367,31 +367,41 @@ applications that provide a fullscreen immersive experience
 		run the following steps:</p>
    <ol>
     <li data-md="">
-     <p>Reset <a data-link-type="dfn" href="#reserved-key-codes" id="ref-for-reserved-key-codes-1">reserved key codes</a> to be an empty set.</p>
+     <p>Let <var>p</var> be a new <a data-link-type="dfn" href="http://tc39.github.io/ecma262/#sec-promise-objects">Promise</a>.</p>
     <li data-md="">
-     <p>If the optional <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes" id="ref-for-dom-navigator-requestkeyboardlock-keycodes-keycodes-1">keyCodes</a></code> argument is present, run the
-following substeps:</p>
+     <p>Run the following steps <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/infrastructure.html#in-parallel">in parallel</a>:</p>
      <ol>
       <li data-md="">
-       <p><a data-link-type="dfn" href="https://infra.spec.whatwg.org/#list-iterate">For each</a> string <var>key</var> in <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes" id="ref-for-dom-navigator-requestkeyboardlock-keycodes-keycodes-2">keyCodes</a></code>:</p>
+       <p>Reset <a data-link-type="dfn" href="#reserved-key-codes" id="ref-for-reserved-key-codes-1">reserved key codes</a> to be an empty set.</p>
+      <li data-md="">
+       <p>If the optional <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes" id="ref-for-dom-navigator-requestkeyboardlock-keycodes-keycodes-1">keyCodes</a></code> argument is present, run the
+following substeps:</p>
        <ol>
         <li data-md="">
-         <p>If <var>key</var> contains a valid <a data-link-type="dfn" href="http://www.w3.org/TR/uievents-code/#key-code-attribute-value">key code attribute value</a>, then</p>
+         <p><a data-link-type="dfn" href="https://infra.spec.whatwg.org/#list-iterate">For each</a> string <var>key</var> in <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes" id="ref-for-dom-navigator-requestkeyboardlock-keycodes-keycodes-2">keyCodes</a></code>:</p>
          <ol>
           <li data-md="">
-           <p><a data-link-type="dfn" href="https://infra.spec.whatwg.org/#set-append">Append</a> <var>key</var> to <a data-link-type="dfn" href="#reserved-key-codes" id="ref-for-reserved-key-codes-2">reserved key codes</a>.</p>
+           <p>If <var>key</var> contains a valid <a data-link-type="dfn" href="http://www.w3.org/TR/uievents-code/#key-code-attribute-value">key code attribute value</a>, then</p>
+           <ol>
+            <li data-md="">
+             <p><a data-link-type="dfn" href="https://infra.spec.whatwg.org/#set-append">Append</a> <var>key</var> to <a data-link-type="dfn" href="#reserved-key-codes" id="ref-for-reserved-key-codes-2">reserved key codes</a>.</p>
+           </ol>
          </ol>
        </ol>
+      <li data-md="">
+       <p>If <a data-link-type="dfn" href="#enable-keyboard-lock" id="ref-for-enable-keyboard-lock-2">enable keyboard lock</a> is currently false, run the following
+substeps:</p>
+       <ol>
+        <li data-md="">
+         <p><a data-link-type="dfn" href="#register-a-system-key-press-handler" id="ref-for-register-a-system-key-press-handler-1">Register a system key press handler</a>.</p>
+        <li data-md="">
+         <p>Set <a data-link-type="dfn" href="#enable-keyboard-lock" id="ref-for-enable-keyboard-lock-3">enable keyboard lock</a> to be true.</p>
+       </ol>
+      <li data-md="">
+       <p>Resolve <var>p</var>.</p>
      </ol>
     <li data-md="">
-     <p>If <a data-link-type="dfn" href="#enable-keyboard-lock" id="ref-for-enable-keyboard-lock-2">enable keyboard lock</a> is currently false, run the following
-substeps:</p>
-     <ol>
-      <li data-md="">
-       <p><a data-link-type="dfn" href="#register-a-system-key-press-handler" id="ref-for-register-a-system-key-press-handler-1">Register a system key press handler</a>.</p>
-      <li data-md="">
-       <p>Set <a data-link-type="dfn" href="#enable-keyboard-lock" id="ref-for-enable-keyboard-lock-3">enable keyboard lock</a> to be true.</p>
-     </ol>
+     <p>Return <var>p</var>.</p>
    </ol>
    <p class="note" role="note">Note: If <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock" id="ref-for-dom-navigator-requestkeyboardlock-2">requestKeyboardLock()</a></code> is called multiple times without an
 		intervening call to <code class="idl"><a data-link-type="idl" href="#dom-navigator-cancelkeyboardlock" id="ref-for-dom-navigator-cancelkeyboardlock-1">cancelKeyboardLock()</a></code>, then only the <code class="idl"><a data-link-type="idl" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes" id="ref-for-dom-navigator-requestkeyboardlock-keycodes-keycodes-3">keyCodes</a></code> specified in the last request call will be in effect.</p>
@@ -578,6 +588,11 @@ usual keyboard shortcut action.</p>
   <h3 class="no-num no-ref heading settled" id="index-defined-elsewhere"><span class="content">Terms defined by reference</span><a class="self-link" href="#index-defined-elsewhere"></a></h3>
   <ul class="index">
    <li>
+    <a data-link-type="biblio">[ECMASCRIPT]</a> defines the following terms:
+    <ul>
+     <li><a href="http://tc39.github.io/ecma262/#sec-promise-objects">promise</a>
+    </ul>
+   <li>
     <a data-link-type="biblio">[Fullscreen]</a> defines the following terms:
     <ul>
      <li><a href="https://fullscreen.spec.whatwg.org/#fullscreen-element">fullscreen element</a>
@@ -587,6 +602,7 @@ usual keyboard shortcut action.</p>
     <ul>
      <li><a href="https://html.spec.whatwg.org/multipage/webappapis.html#navigator">Navigator</a>
      <li><a href="https://html.spec.whatwg.org/#currently-focused-area-of-a-top-level-browsing-context">currently focused area of a top-level browsing context</a>
+     <li><a href="https://html.spec.whatwg.org/multipage/infrastructure.html#in-parallel">in parallel</a>
     </ul>
    <li>
     <a data-link-type="biblio">[INFRA]</a> defines the following terms:
@@ -618,6 +634,8 @@ usual keyboard shortcut action.</p>
   <h2 class="no-num no-ref heading settled" id="references"><span class="content">References</span><a class="self-link" href="#references"></a></h2>
   <h3 class="no-num no-ref heading settled" id="normative"><span class="content">Normative References</span><a class="self-link" href="#normative"></a></h3>
   <dl>
+   <dt id="biblio-ecmascript">[ECMASCRIPT]
+   <dd><a href="https://tc39.github.io/ecma262/">ECMAScript Language Specification</a>. URL: <a href="https://tc39.github.io/ecma262/">https://tc39.github.io/ecma262/</a>
    <dt id="biblio-fullscreen">[Fullscreen]
    <dd>Anne van Kesteren. <a href="https://fullscreen.spec.whatwg.org/">Fullscreen API Standard</a>. Living Standard. URL: <a href="https://fullscreen.spec.whatwg.org/">https://fullscreen.spec.whatwg.org/</a>
    <dt id="biblio-html">[HTML]
@@ -644,7 +662,7 @@ usual keyboard shortcut action.</p>
   </dl>
   <h2 class="no-num no-ref heading settled" id="idl-index"><span class="content">IDL Index</span><a class="self-link" href="#idl-index"></a></h2>
 <pre class="idl def"><span class="kt">partial</span> <span class="kt">interface</span> <a class="nv idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/webappapis.html#navigator">Navigator</a> {
-  [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">void</span> <a class="nv" href="#dom-navigator-requestkeyboardlock">requestKeyboardLock</a>(<span class="kt">optional</span> <span class="kt">sequence</span>&lt;<span class="kt">DOMString</span>> <a class="nv" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes">keyCodes</a> = []);
+  [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">Promise</span>&lt;<span class="kt">void</span>> <a class="nv" href="#dom-navigator-requestkeyboardlock">requestKeyboardLock</a>(<span class="kt">optional</span> <span class="kt">sequence</span>&lt;<span class="kt">DOMString</span>> <a class="nv" href="#dom-navigator-requestkeyboardlock-keycodes-keycodes">keyCodes</a> = []);
   [<a class="nv idl-code" data-link-type="extended-attribute" href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>] <span class="kt">void</span> <a class="nv" href="#dom-navigator-cancelkeyboardlock">cancelKeyboardLock</a>();
 };
 
