Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ usual keyboard shortcut action.</p>
 		be updated when keyboard lock is in effect to read "Press and hold ESC to exit
 		fullscreen".</p>
    <p>If keyboard lock is activated after fullscreen is already in effect, then the user
-		my see multiple messages about how to exit fullscreen.
+		may see multiple messages about how to exit fullscreen.
 		For this reason, we recommend that developers call <code class="idl"><a data-link-type="idl" href="#dom-keyboard-lock" id="ref-for-dom-keyboard-lock⑦">lock()</a></code> before they enter
 		fullscreen:</p>
 <pre>navigator.keyboard.lock();
